--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
               <div class="col-4">
                 <p>
                   <b>Teaching autumn 2018</b>>
-                  <a class="bt" href="prog3_2018autumn/index.html"
-                    >Programming, 3rd semester, Comp Science</a
+                  <a class="bt" href="prog3_2018autumn/index.html"Programming, 3rd semester, Comp Science</a
                   >
                   <a href="mobile2018autumn/index.html">
                     Mobile Application Development</a
