Fixed another typo

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div class="about">
             <p><strong>Anders B&oslash;rjesson (anbo)</strong></p>
             <p><strong>Cand.scient. i matematik og datalogi</strong></p>
-            <p><strong>p&aring; Datamatikeruddannelsen</strong></p>
-            <p><strong>, Sjællands Erhvervsakademi, Roskilde</strong></p>
+            <p><strong>p&aring; Datamatikeruddannelsen,</strong></p>
+            <p><strong>Sjællands Erhvervsakademi, Roskilde</strong></p>
           </div>
         </div>
         <div class="spacing"></div>
