Fixed another typo

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div>
             <div class="teaching row">
               <div class="col-4">
-                <p><b>Teaching autumn 2018</b></p>
+                <p><b>Teaching autumn 2019</b></p>
                 <p>
                   <a
                     href="https://docs.google.com/document/d/e/2PACX-1vQnP5GDXd2YmuUapbnNgaUAK-4gsDtZGDl-qZT-g3xsUCSvPhfr1OTdo7esf_b3qm3ypfQSwMuz5Mab/pub"
@@ -91,7 +91,7 @@
               </div>
               <div class="col-4">
                 <p>
-                  <b>Teaching autumn 2018</b>>
+                  <b>Teaching autumn 2018</b>
                   <a class="bt" href="prog3_2018autumn/index.html"Programming, 3rd semester, Comp Science</a
                   >
                   <a href="mobile2018autumn/index.html">
