--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="contact col-11 mt-5">
             <p>Address (work):</p>
             <p>Maglegårdsvej 2, 4000 Roskilde</p>
-            <p>E-mail (work)</p>
+            <p>E-mail (work): anbo(at)zealand.dk</p>
           </div>
           <div class="cv col mt-5">
             <a href="cv/">CV</a>
@@ -54,54 +54,43 @@
                 <p>
                   <a
                     href="https://docs.google.com/document/d/e/2PACX-1vQnP5GDXd2YmuUapbnNgaUAK-4gsDtZGDl-qZT-g3xsUCSvPhfr1OTdo7esf_b3qm3ypfQSwMuz5Mab/pub"
-                    >Programmering 3sem</a
-                  >
+                    >Programmering 3sem </a>
                   Datamatiker
                 </p>
                 <p>
                   <a href="mobile2018autumn/index.html"
-                    >Mobile Application Development</a
-                  >, 4th semester Comp Science
+                    >Mobile Application Development</a>
+                    , 4th semester Comp Science
                 </p>
                 <p>
-                  <a href="mobile2018autumn/index.html">
-                    Mobile Application Development</a
-                  >, 4th semester Comp Science
+                  <a href="internship/index.html">Internship</a>, 5th semester, Comp Science
                 </p>
-                <p>
-                  <a href="internship/index.html">Internship</a>, 5th semester,
-                </p>
-
                 <p><a href="dissertation2018autumn/">Dissertation course</a></p>
-                <p>
-                  <a href="undervisning/">Previous semesters</a>
-                </p>
+                
+                <p>Dissertations, Computer Science</p>
+              </div>
+              <div class="col-4">
+                <p><b>Teaching spring 2019</b></p>
+                <p><a href="mobile2019spring/index.html">
+                  Mobile Application Development</a
+                >, 4th semester Comp Science</p>
+                <p><a href="internship/index.html">Internship</a>, 5th semester, Comp Science </p>
+                <p><a href="dissertation2019spring/">Dissertation course</a>
+                <p>Dissertations, Computer Science</p>
               </div>
               <div class="col-4">
                 <p>
-                  <strong>Teaching spring 2019</strong>
-                  <a href="mobile2019spring/index.html">
+                  <p><b>Teaching autumn 2018</b></p>
+                  <p><a href="prog3_2018autumn/index.html">Programming, 3rd semester, Comp Science</a
+                  ></p>
+                  <p><a href="mobile2018autumn/index.html">
                     Mobile Application Development</a
-                  >, 4th semester Comp Science
-                  <a href="internship/index.html">Internship</a>, 5th semester,
-                  Comp Science
-                  <a href="dissertation2019spring/">Dissertation course</a>
-                  Dissertations, Computer Science
-                </p>
-              </div>
-              <div class="col-4">
-                <p>
-                  <b>Teaching autumn 2018</b>
-                  <a class="bt" href="prog3_2018autumn/index.html"Programming, 3rd semester, Comp Science</a
-                  >
-                  <a href="mobile2018autumn/index.html">
-                    Mobile Application Development</a
-                  >, 4th semester Comp Science
-                  <a href="internship/index.html">Internship</a>, 5th semester,
-                  Comp Science
-                  <a href="dissertation2018autumn/">Dissertation course</a>
-                  Dissertations, Computer Science
-                  <a href="undervisning/">Previous semesters</a>
+                  >, 4th semester Comp Science </p>
+                  <p><a href="internship/index.html">Internship</a>, 5th semester,
+                  Comp Science</p>
+                  <p><a href="dissertation2018autumn/">Dissertation course</a></p>
+                  <p>Dissertations, Computer Science</p>
+                  <p><a href="undervisning/">Previous semesters</a></p>
                 </p>
               </div>
             </div>
@@ -109,22 +98,22 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="footer">
-      <p>
-        <a href="https://msdn.microsoft.com/en-us/default.aspx"
-          >Microsoft Developer Network</a
-        >
-        |
-        <a href="https://msdn.microsoft.com/en-us/library/default.aspx"
-          >MSDN Library: Intro. til programmeringssprog mv.
-        </a>
-      </p>
-      <p>
-        <a href="bekendtgoerelser/">Bekendtg&oslash;relser</a> om
-        datamatiker-uddannelsen, eksamen og lign.
-        <a href="index.htm">index</a>
-      </p>
+      <div class="footer">
+        <p>
+          <a href="https://msdn.microsoft.com/en-us/default.aspx"
+            >Microsoft Developer Network</a
+          >
+          |
+          <a href="https://msdn.microsoft.com/en-us/library/default.aspx"
+            >MSDN Library: Intro. til programmeringssprog mv.
+          </a>
+        </p>
+        <p>
+          <a href="bekendtgoerelser/">Bekendtg&oslash;relser</a> om
+          datamatiker-uddannelsen, eksamen og lign.
+          <a href="index.htm">index</a>
+        </p>
+      </div>
     </div>
 
     <script>
