--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <div class="top-bar">
-        <a href="http://www.easj.dk/">Erhvervsakademi Sjælland</a> ~ Anders
+        <a href="https://www.zealand.dk/">Erhvervsakademi Sjælland</a> ~ Anders
         B&oslash;rjesson
       </div>
       <div class="container mt-1">
@@ -58,39 +58,39 @@
                   Datamatiker
                 </p>
                 <p>
-                  <a href="mobile2018autumn/index.html"
+                  <a href="https://docs.google.com/document/d/e/2PACX-1vQSdR7ZSr7DfFCc8SC0tSqz8VaLKHN8LCGRmfxTFVnl1GgkHnk_Wr_-7r_Lr5EX-qpOt7sBzo6SmHH0/pub"
                     >Mobile Application Development</a>
                     , 4th semester Comp Science
                 </p>
                 <p>
-                  <a href="internship/index.html">Internship</a>, 5th semester, Comp Science
+                  <a href="https://anbo-easj.dk/internship/index.html">Internship</a>, 5th semester, Comp Science
                 </p>
-                <p><a href="dissertation2018autumn/">Dissertation course</a></p>
+                <p><a href="https://anbo-easj.dk/dissertation2020spring/">Dissertation course</a></p>
                 
                 <p>Dissertations, Computer Science</p>
               </div>
               <div class="col-4">
                 <p><b>Teaching spring 2019</b></p>
-                <p><a href="mobile2019spring/index.html">
+                <p><a href="https://anbo-easj.dk/mobile2019spring/index.html">
                   Mobile Application Development</a
                 >, 4th semester Comp Science</p>
-                <p><a href="internship/index.html">Internship</a>, 5th semester, Comp Science </p>
-                <p><a href="dissertation2019spring/">Dissertation course</a>
+                <p><a href="https://anbo-easj.dk/internship/index.html">Internship</a>, 5th semester, Comp Science </p>
+                <p><a href="https://anbo-easj.dk/dissertation2019spring/">Dissertation course</a>
                 <p>Dissertations, Computer Science</p>
               </div>
               <div class="col-4">
                 <p>
                   <p><b>Teaching autumn 2018</b></p>
-                  <p><a href="prog3_2018autumn/index.html">Programming, 3rd semester, Comp Science</a
+                  <p><a href="https://anbo-easj.dk/prog3_2018autumn/index.html">Programming, 3rd semester, Comp Science</a
                   ></p>
-                  <p><a href="mobile2018autumn/index.html">
+                  <p><a href="https://anbo-easj.dk/mobile2018autumn/index.html">
                     Mobile Application Development</a
                   >, 4th semester Comp Science </p>
-                  <p><a href="internship/index.html">Internship</a>, 5th semester,
+                  <p><a href="https://anbo-easj.dk/internship/index.html">Internship</a>, 5th semester,
                   Comp Science</p>
-                  <p><a href="dissertation2018autumn/">Dissertation course</a></p>
+                  <p><a href="https://anbo-easj.dk/dissertation2018autumn/">Dissertation course</a></p>
                   <p>Dissertations, Computer Science</p>
-                  <p><a href="undervisning/">Previous semesters</a></p>
+                  <p><a href="https://anbo-easj.dk/undervisning/">Previous semesters</a></p>
                 </p>
               </div>
             </div>
